# PIS-CA-Protocol-Component

./: README.md
PIS-CA Refactor/: CMakeLists.txt  README.md  main.cpp
PIS-CA Refactor/CamenischShoup/: CamenischShoupEnc.cpp  CamenischShoupEnc.h  CamenischShoupEncZKP.cpp  CamenischShoupEncZKP.h
PIS-CA Refactor/Curdleproofs/: Curdleproofs.cpp  Curdleproofs.h
PIS-CA Refactor/Curdleproofs/ElGamalCommitment/: ElGamalCommitment.cpp  ElGamalCommitment.h
PIS-CA Refactor/Curdleproofs/SameMultiScalar Argument/: SameMultiScalarArgument.cpp  SameMultiScalarArgument.h
PIS-CA Refactor/Curdleproofs/SamePermutation Argument/: SamePermutationArgument.cpp  SamePermutationArgument.h
PIS-CA Refactor/Curdleproofs/SameSalar Argument/: SameScalarArgument.cpp  SameScalarArgument.h
PIS-CA Refactor/ElGamal/: ElGamalEnc.cpp  ElGamalEnc.h
PIS-CA Refactor/PIS-CA/: PISCAProtocol.cpp  PISCAProtocol.h  SigmaCiphertextArgument.cpp  SigmaCiphertextArgument.h
PIS-CA Refactor/commitment/: vector_commitment.cpp  vector_commitment.hpp
PIS-CA Refactor/core/: encryption.cpp  encryption.hpp  params.hpp
PIS-CA Refactor/docs/: ARCHITECTURE.md
PIS-CA Refactor/examples/: simple_example.cpp
PIS-CA Refactor/include/: cs_commitment.hpp  cs_context.hpp  cs_encryption.hpp  cs_types.hpp  cs_utils.hpp
PIS-CA Refactor/src/: cs_commitment.cpp  cs_context.cpp  cs_encryption.cpp  cs_utils.cpp
PIS-CA Refactor/tests/: camenisch_shoup_enc_test.cpp  camenisch_shoup_enc_zkp_test.cpp  curdleproofs_test.cpp  elgamal_commitment_test.cpp  elgamal_enc_test.cpp  ntl_smoke_test.cpp  openssl_smoke_test.cpp  pisca_protocol_test.cpp  same_multi_scalar_argument_test.cpp  same_permutation_argument_test.cpp  same_scalar_argument_test.cpp  sigma_ciphertext_argument_test.cpp  test_cs_system.cpp
